# duco_control

./: .gitignore  .gitmodules  3d_mouse_plan.md  README.md  colcon_defaults.yaml  manual.md  pyproject.toml  read_ft_sensor.py  spacemouse_pose_migration_plan.md
config/: joint_config.yaml  robot_config.example.yaml  robot_config.ur15.example.yaml
src/alicia_teleop/: README.md  package.xml
src/alicia_teleop/alicia_teleop/: teleop_node.py
src/alicia_teleop/launch/: alicia_teleop.launch.py
src/cartesian_control_manager/: README.md  package.xml  setup.cfg  setup.py
src/cartesian_control_manager/cartesian_control_manager/: control_node.py
src/cartesian_control_manager/launch/: cartesian_control.launch.py  cartesian_control_real.launch.py
src/cartesian_control_manager/test/: test_orchestration.py
src/cartesian_controller_dashboard/: README.md  package.xml  setup.cfg  setup.py
src/cartesian_controller_dashboard/cartesian_controller_dashboard/: dashboard_node.py
src/cartesian_controller_dashboard/cartesian_controller_dashboard/static/: dashboard.css  dashboard.js  force_plot.js  index.html  urdf_viewer.js
src/cartesian_controller_dashboard/launch/: dashboard.launch.py
src/common/: README.md  package.xml  setup.py
src/common/common/: config_manager.py  urdf_loader.py  workspace_utils.py
src/duco_cartesian_control/: README.md  package.xml  setup.cfg  setup.py
src/duco_cartesian_control/config/: fzi_zero_gravity.yaml
src/duco_cartesian_control/duco_cartesian_control/: control_node.py
src/duco_cartesian_control/launch/: cartesian_control.launch.py  cartesian_control_real.launch.py
src/duco_cartesian_control/test/: test_orchestration.py
src/duco_dashboard/: README.md  package.xml  setup.cfg  setup.py
src/duco_dashboard/duco_dashboard/: __init__.py  dashboard_node.py  kinematics.py
src/duco_dashboard/launch/: dashboard.launch.py
src/duco_dashboard/resource/: duco_dashboard
src/duco_dashboard/static/: index.html
src/duco_ft_sensor/: README.md  package.xml  setup.cfg  setup.py
src/duco_ft_sensor/duco_ft_sensor/: cli.py  driver.py  ft_sensor_node.py
src/duco_ft_sensor/launch/: ft_sensor.launch.py
src/duco_robot_bringup/: package.xml  setup.cfg  setup.py
src/duco_robot_bringup/config/: fzi_preset.yaml
src/duco_robot_bringup/duco_robot_bringup/: __init__.py
src/duco_robot_bringup/launch/: gcr5_910_ros2_control.launch.py
src/duco_robot_bringup/resource/: duco_robot_bringup
src/ft_sensor_dashboard/: README.md  package.xml  setup.cfg  setup.py
src/ft_sensor_dashboard/ft_sensor_dashboard/: dashboard_node.py
src/ft_sensor_dashboard/launch/: dashboard.launch.py
src/ft_sensor_gravity_compensation/: README.md  package.xml  setup.cfg  setup.py
src/ft_sensor_gravity_compensation/ft_sensor_gravity_compensation/: __init__.py  calibration.py  compensation_node.py  ee_store.py
src/ft_sensor_gravity_compensation/launch/: compensation.launch.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/launch/: duco_bringup.launch.py  ur15_bringup.launch.py
src/robot_bringup/robot_bringup/: stack.py
src/spacemouse_teleop/: README.md  package.xml  setup.cfg  setup.py
src/spacemouse_teleop/config/: servo_defaults.yaml
src/spacemouse_teleop/launch/: spacemouse_servo.launch.py  spacemouse_teleop.launch.py
src/spacemouse_teleop/spacemouse_teleop/: bridge_node.py  dashboard_node.py  servo_node.py  teleop_defaults.py  twist_integrator.py
src/spacemouse_teleop/test/: manual_servo_integration.py  test_twist_integrator.py
src/ur15_robot_bringup/: package.xml  setup.cfg  setup.py
src/ur15_robot_bringup/config/: fzi_preset.yaml
src/ur15_robot_bringup/launch/: ur15_ros2_control.launch.py
tools/: build_read_tcp_pose.sh  cartesian_auto_tune.py  compliance_tune.py  ikt_safety_watchdog.py  read_tcp_pose  read_tcp_pose.cpp  test_forward_position.py  test_ft_sensor.py
