<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cartesian_control_manager</name>
  <version>0.1.0</version>
  <description>
    Robot-agnostic orchestrator for FZI's Cartesian controllers. Spawns
    cartesian_force_controller / cartesian_motion_controller /
    cartesian_compliance_controller (all inactive) into the live
    controller_manager, relays a gravity-compensated wrench onto each
    controller's RELIABLE input, publishes a target_wrench heartbeat,
    exposes engage/disengage Trigger services that atomically swap the
    robot's JointTrajectoryController with the selected FZI controller,
    and runs a safety supervisor that auto-disengages on stale topics
    or excessive force/torque. All robot-specific knobs (joint names,
    frame names, JTC controller name, topic names, FZI YAML location)
    are parameters, so the same manager runs on any robot whose URDF
    is reachable to the FZI plugins. The Cartesian hot path itself is
    the C++ plugin from a fork of
    https://github.com/fzi-forschungszentrum-informatik/cartesian_controllers.
    The system runs without any dashboard; cartesian_controller_dashboard
    is a separate, optional package.
  </description>

  <maintainer email="yizhongzhang1989@gmail.com">yizhongzhang</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>cartesian_force_controller</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>common</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
