<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spacemouse_teleop</name>
  <version>1.0.0</version>
  <description>
    Cartesian jog bridge for the 3Dconnexion SpaceMouse. Integrates the
    spacenav velocity twist into a streaming PoseStamped target (captured from
    the live end-effector pose over TF), with dead-man gating and conservative
    speed limits. Robot-agnostic: the output drives any pose consumer
    (e.g. ikt_pose_commander or an FZI cartesian_motion_controller).
  </description>

  <maintainer email="yizhong@todo.todo">Yizhong Zhang</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>
  <depend>python3-numpy</depend>

  <exec_depend>spacenav</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
