<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spacemouse_teleop</name>
  <version>0.1.0</version>
  <description>
    Translate the 3Dconnexion SpaceMouse pose_node's absolute pose
    (/spacemouse/curr_pose) into an absolute target pose for ikt_pose_commander
    (~/target_pose), anchored to the robot's current end-effector so jogging
    starts jump-free. The single adapter between the robot-agnostic SpaceMouse
    package and the device-agnostic pose commander.
  </description>
  <maintainer email="robot@todo.todo">robot</maintainer>
  <license>MIT</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <!-- workspace config loader (config/robot_config.yaml). -->
  <exec_depend>cct_common</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
